# discord-auto-moderation-bot

./: Procfile  black list record.json  emoji.py  main.py  pyproject.toml  requirements.txt  test.py  warnings.json
config/: settings.py
utils/: discord.py  network.py  protocols.py
