[tool.poetry]
name = "discord-auto-moderation-bot-1"
version = "0.1.0"
description = ""
authors = ["M-UsamaUsama <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
pymongo = "^4.1.1"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
dnspython = "^2.2.1"
web3 = "^5.29.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
